# ip2root

./: .gitignore  COPYING.md  README.md  c2.py  constants.py  ip2root.py  main.py  privesc.py  pyproject.toml  python3  rce.txt  recon.py  report.py  requirements.txt  rs_client.py  test  utils.py
c2/: build.sh  c2.py
core/: constants.py  privesc.py  recon.py  report.py  utils.py
infra/apache-sudo/: Dockerfile  build.sh
infra/apache-sudo-2.4.49/: Dockerfile  build.sh  httpd.conf
infra/apache-sudo-2.4.50/: Dockerfile  build.sh
infra/apache-vuln/: README.md  build.sh  httpd.conf
infra/gitlab-etcpasswd/: Dockerfile  build.sh
infra/log4j-polkit/: Dockerfile  build.sh
infra/php_8.1.0_backdoor_suid/: docker-compose.yml
infra/php_8_1_0_backdoor_suid/: docker-compose.yml  index.php
infra/text4shell/: build.sh
infra/vsftp_2_3_4/: Dockerfile  build.sh  docker-compose.yml
plugins/initial_access/: __init__.py  apache2_4_49RCE.ini  apache2_4_49_RCE.py  apache_httpd_2_4_49_rce.ini  apache_httpd_2_4_49_rce.py  apache_httpd_2_4_50_rce.ini  apache_httpd_2_4_50_rce.py  gitlab13_0_2.ini  gitlab13_0_2.py  gitlab13_10_2.ini  gitlab13_10_2.py  php_8_1_0_backdoor.ini  php_8_1_0_backdoor.py  plugin_initial_access_apache2_4_49_RCE.py  vsftpd2_3_4.ini  zimbra8_6_0_RCE.py
plugins/privesc/: etcpasswd_writable.sh  plugin_privesc_sudo.sh
